<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--content    -->
    <LinearLayout
        android:layout_width="@dimen/content1"
        android:layout_height="wrap_content"
        android:background="#82ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <!--logo-->
        <ImageView
            android:layout_width="@dimen/logo"
            android:layout_height="@dimen/logo"
            android:src="@drawable/mylogo" />
        <!--user-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--icon-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_user" />

            <!--user-->
            <EditText
                android:id="@+id/edtuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:inputType="number" />


        </LinearLayout>
        <!--password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--icon-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_password" />

            <!--Password-->
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />


        </LinearLayout>
        <!--Sign In-->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/signin"
            android:textColor="@color/white" />
        <!--New Register-->
        <TextView
            android:layout_margin="10dp"
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/h2"
            android:textStyle="bold" />

        <!--Forgot password-->
        <TextView
            android:id="@+id/txtForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/forgotpassword"
            android:textColor="@color/black"
            android:textSize="@dimen/h2"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>