<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Toolbar-->
    <include
        android:id="@+id/toolbarRegister2"
        layout="@layout/my_toolbar" />


    <!--Content-->
    <LinearLayout
        android:background="@color/white_bg"
        android:padding="@dimen/padding"
        android:layout_margin="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--idStudent-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Icon-->
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_action_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--TextField-->
            <EditText
                android:id="@+id/edtIDstudent"
                android:inputType="number"
                android:hint="@string/id_student13digi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <!--Password-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Icon-->
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_action_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--TextField-->
            <EditText
                android:id="@+id/edtPassword"
                android:inputType="textPassword"
                android:hint="@string/pass1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <!--Re-Password-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Icon-->
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_action_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--TextField-->
            <EditText
                android:id="@+id/edtRePassword"
                android:inputType="textPassword"
                android:hint="@string/pass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>



</LinearLayout>