<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--toolbar-->
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/ToobarRegister">

        <!--Icon save-->
        <ImageView
            android:id="@+id/imvSave"
            android:layout_marginRight="10dp"
            android:layout_gravity="right"
            android:src="@mipmap/ic_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.Toolbar>

    <!--Content-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding">



        <!--Content-->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#d0ffffff"
            android:orientation="vertical"
            android:padding="@dimen/padding">


            <!--ID number Student 13 digit-->
            <LinearLayout
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <!--<icon-->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_user" />
                <!--<ID number Student 13 digit-->
                <EditText
                    android:id="@+id/edtIDstudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/id_student13digi"
                    android:inputType="number"
                    android:textColorHint="@color/yellow" />
            </LinearLayout>


            <!--<<Name-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <!--<icon-->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_user" />
                <!--<Name-->
                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="ชื่อ :"
                    android:inputType="text"
                    android:textColorHint="@color/yellow" />


            </LinearLayout>


            <!--<Surname-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <!--<icon-->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_user" />
                <!--<SurName-->
                <EditText
                    android:id="@+id/edtSurName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="นามสกุล :"
                    android:inputType="text"
                    android:textColorHint="@color/yellow" />
            </LinearLayout>

            <!--Genner-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:text="เพศ"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/h1"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/ragGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--male-->
                <RadioButton
                    android:id="@+id/radMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="ชาย" />

                <!--famle-->
                <RadioButton
                    android:id="@+id/radFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:text="หญิง" />


            </RadioGroup>


            <!--Major-->
            <TextView
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="@dimen/h2"
            android:text="@string/major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spnMajor"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Sector-->
            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="@dimen/h2"
                android:text="@string/sector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spnSector"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Class-->
            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="@dimen/h2"
                android:text="@string/my_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spnClass"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <!--password-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <!--<icon-->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_password" />
                <!--<Password-->
                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass1"
                    android:inputType="textPassword"
                    android:textColorHint="@color/yellow" />
            </LinearLayout>


            <!--Confirm Password-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <!--<icon-->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_password" />
                <!--<RePassword-->
                <EditText
                    android:id="@+id/edtRePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass2"
                    android:inputType="textPassword"
                    android:textColorHint="@color/yellow" />
            </LinearLayout>


            <!--Show Spinner-->


        </LinearLayout>


    </ScrollView>





</LinearLayout>